--- a/styles.css
+++ b/styles.css
@@ -9,20 +9,26 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.grid {
     padding-top: 100px;
     display: flex;
     flex-wrap: wrap;
-    width: calc(50px * 16);
-    height: calc(50px * 16);
+    width: 800px;
+    height: 800px;
 }
 .square {
     width: 50px;
     height: 50px;
     border: 1px solid black;
 }
-
 .black {
     background-color: black;
     color: black;
