--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,22 @@ body {
     user-select: none;
 }
 .controls {
-    width: 100px;
+    margin: 0 70px;
+    width: 200px;
     height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.controls button {
+    color: var(--text-color);
+    padding: 8px 20px;
+    max-width: 180px;
+    width: 100%;
+    font-size: 1.2rem;
+    margin: 15px 0;
+    border-radius: 5px;
+    border: 1px solid var(--text-color);
 }
