Add button activated status and hover effect

--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,6 @@ body {
     text-align: center;
 }
 .controls button {
-    color: var(--text-color);
     padding: 8px 20px;
     max-width: 180px;
     width: 100%;
@@ -56,4 +55,12 @@ body {
     margin: 15px 0;
     border-radius: 5px;
     border: 1px solid var(--text-color);
+    cursor: pointer;
+}
+.controls button:hover {
+    transform: scale(1.1);
+}
+.activated {
+    background-color: var(--text-color);
+    color: var(--background-color);
 }
