--- a/styles.css
+++ b/styles.css
@@ -64,3 +64,36 @@ body {
     background-color: var(--text-color);
     color: var(--background-color);
 }
+#sizeText {
+    font-weight: normal;
+}
+#size {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 10px;
+    border-radius: 5px;  
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+    margin-top: 10px;
+}
+  
+#size::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%; 
+    background: var(--text-color);
+    cursor: pointer;
+}
+  
+#size::-moz-range-thumb {
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    background: var(--text-color);
+    cursor: pointer;
+}
