--- a/styles.css
+++ b/styles.css
@@ -148,4 +148,7 @@ body {
 #colorInput {
     height: 25px;
     width: calc(180px - 30px);
+    border-radius: 5px;
+    border: 1px solid var(--text-color);
+    padding-left: 5px;
 }
