--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 :root {
     --background-color: #eee;
     --text-color: #222831;
+    overflow-x: hidden;
 }
 * {
     box-sizing: border-box;
@@ -15,6 +16,9 @@ body {
     align-items: center;
     flex-direction: column;
     background-color: var(--background-color);
+}
+a {
+    color: var(--text-color);
 }
 #title {
     font-size: 4rem;
@@ -151,4 +155,25 @@ body {
     border-radius: 5px;
     border: 1px solid var(--text-color);
     padding-left: 5px;
+}
+footer {
+    margin-top: 40px;
+    height: 70px;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+#copyright {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#copyright p {
+    margin-right: 5px;
+}
+#copyright p a {
+    text-decoration: none;
 }
